# ai-plays-if

./: .gitattributes  .gitignore  README.md  pyproject.toml
ai_plays_if/: __init__.py  __main__.py  default_config.py  start_playing.py
ai_plays_if/ai/: ai.py
ai_plays_if/cli/: logging.py  main.py
ai_plays_if/story/: story.py
configs/: planetfall.config
